<resources>
    <string name="app_name">Cinemax</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Email_id">Email Id</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Registration">Create Account</string>
    <string name="repeat_your_password">Repeat Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Have already an account? Login here</string>
    <string name="agree">I agree all statements in Terms of service</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="action_settings">Settings</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification">Verification</string>
    <string name="didnt_receive">Didn’t receive code?\nResend in 32 s</string>
    <string name="reset_passwordd">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_passwordbtn">Reset Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in_30_seconds">Resend OTP in 30 seconds</string>
    <string name="sptext">We’ve sent OTP to your mobile number at *********080. Please enter 4 digits code you receive.</string>
    <string name="seat_image">seat_image\n</string>
</resources>