<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#010c19"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="300dp"
        android:maxWidth="200dp"
        android:background="@drawable/login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/baseline_person_24"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_id"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_selector"
            style="@style/CustomEditText"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:background="@drawable/edittext_selector"
            style="@style/CustomEditText"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="#fc386d"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="#fc386d" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

